css/style.css
/* ... */
#slider2 {
  background: url("../img/iphone-bg.png") no-repeat;
  display: block;
  height: 621px;
  width: 353px;
  margin: 80px auto 0;
  position: relative;
}
#slider2 img {
  width: 247px;
  height: 433px;
  position: absolute;
  top: 60px;
  left: 50px;
}
#prev2 {
  font-size: 48px;
  color: #908a8a;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
  position: relative;
  top: 300px;
  display: block;
}
#prev2 i,
#next2 i {
  opacity: 0.5!important;
  transition: all .5s;
}
#next2 {
  font-size: 48px;
  color: #908a8a;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
  position: relative;
  left: -6px;
  top: 300px;
  width: 48px;
  height: 48px;
  display: block;
  background-position: 0 0;
}
#next2 i:hover,
#prev2 i:hover {
  opacity: 1!important;
}
/*=========================================================================
NAME/EMAIL NEWSLETTER
===========================================================================*/
.email-newsletter {
  width: 250px;
  float: left;
  border-radius: 0 0 0 0;
  height: 40px;
  line-height: 40px;
  padding: 0 20px;
  background-color: #f7f7f7;
  color: #c2c5c7;
  font-style: italic;
  font-size: 14px;
  border: 1px solid #E4DBDB;
}
.email-newsletter.firstname {
  width: 150px;
}
.email-newsletter:first-child {
  border-radius: 4px 0 0 4px;
}
input.email-newsletter:focus {
  box-shadow: none!important;
  border: 1px solid #f3f0f0!important;
}

.btn-newsletter { padding: 3px 12px; }

.bg-newsletter {
  background: url("../img/submit.png") no-repeat;
  width: 35px;
  height: 27px;
  background-position: 0px 1px;
}

.button-newsletter {
  /* float: left; */
  -webkit-border-top-right-radius: 4px;
  -webkit-border-bottom-right-radius: 4px;
  -moz-border-radius-topright: 4px;
  -moz-border-radius-bottomright: 4px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}
.butt1 a,
ul.navi li.spec a.down,
.barr,
.button-newsletter,
.p2-icon,
.p2 a,
.slide-txt a:hover,
.wrap input.submit-contact {
  background-color: #2BA6DA;
}
.button-newsletter,
.wrap input.submit-contact,
.butt1 a {
  border: 1px solid #2BA6DA;
}
/*=========================================================================
Appearance Helpers
===========================================================================*/
a.text-white,
.text-white,
a.text-white:visited {
  color: white;
  text-decoration: none;
}
a.text-white:hover,
a.text-white:visited:hover {
  color: #ccc;
  text-decoration: none;
}
.bg-white {
  background-color: white;
}
.text-faded { opacity: 0.7 }

.text-head {
  font-family: roboto;
  font-size: 21pt;
  font-weight: bold;
  color: #535353;
}

.text-justify { text-align: justify }

.text-quote {
	font-style: italic;
}

.orangeline {
  height: 2px;
  width: 100px;
  margin: 2em auto;
  background: #e45e43;
}
label.control-label {
  font-family: roboto;
}
/*=========================================================================
Layout Helpers
===========================================================================*/
.font-large {
  font-size: 2em;
}
.m-bottom { margin-bottom: 1em }
.m-bottom-25 { margin-bottom: 25px }
.m-bottom-80 {
  margin-bottom: 80px;
}
.m-top-n35 { margin-top: -35px }
.m-top-80 {
  margin-top: 80px;
}
.margin-auto {
  margin: auto;
}
.p-left-10 { padding-left: 10px }
.p-right-100 {
  padding-right: 100px;
}
.p-top-10 { padding-top: 10px }
.p-top-40 {
  padding-top: 40px;
}
.w-470 {
  width: 470px;
}

